# plane-ai

./: Cargo.toml  ai-agent-plane-integration.md  ai-agent-sdlc-workflow.md  manual-e2e-testing.md
migrations/: 0001_init.sql
src/: config.rs  error.rs  lib.rs  main.rs
src/agent/: mod.rs  policy.rs  prompts.rs  runner.rs  scope.rs  tools.rs  trigger.rs
src/db/: mod.rs  project_controls.rs  runs.rs  webhook_events.rs
src/http/: mod.rs  routes.rs
src/plane/: client.rs  mod.rs  types.rs  webhooks.rs
src/ui/: mod.rs
src/workers/: mod.rs  run_executor.rs  webhook_processor.rs
tests/: plane_client.rs  webhook_flow.rs
